# FAGE-2e-Character-Planner

./: Cargo.toml  README.md
fage2e/: Cargo.toml
fage2e-gui/: Cargo.toml  Dioxus.toml
fage2e-gui/assert-sources/: info-160x160.pdn  warning-160x160.pdn
fage2e-gui/assets/: main.css
fage2e-gui/src/: advancement.rs  character_sheet.rs  customizer_bar.rs  level.rs  lib.rs  main.rs  styling.rs  util.rs  widget.rs
fage2e-gui/src/advancement/: ability_determination.rs  ancestry.rs  ancestry_benefits.rs  ancestry_selection.rs  class.rs  class_selection.rs  envoy.rs  health.rs  initial_weapon_group.rs  mage.rs  rogue.rs  warrior.rs
fage2e-gui/src/advancement/ancestry/: draak.rs  dwarf.rs  elf.rs  gnome.rs  goblin.rs  halfling.rs  human.rs  orc.rs  wildfolk.rs
fage2e-gui/src/advancement/class/: envoy.rs  warrior.rs
fage2e/src/: ability.rs  advancement.rs  ancestry.rs  character.rs  character_creation.rs  class.rs  level.rs  lib.rs  modifier.rs  numbers.rs  power.rs  weapon.rs
fage2e/src/ancestry/: draak.rs  dwarf.rs  elf.rs  gnome.rs  goblin.rs  halfling.rs  human.rs  orc.rs  wildfolk.rs
fage2e/src/class/: envoy.rs  mage.rs  rogue.rs  warrior.rs
src/: ability.rs  advancement.rs  character.rs  character_creation.rs  class.rs  level.rs  lib.rs  main.rs  modifier.rs  weapon.rs
src/class/: envoy.rs  mage.rs  rogue.rs  warrior.rs
