[package]
name = "fage2e-gui"
version = "0.1.0"
authors = ["Jennifer Dahm <jennifer.carol.dahm@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fage2e = { path = "../fage2e", features = ["serde", "rand"] }
strum = { version = "0.26.2", features = ["derive"] }
# Necessary for the rand crate to work in webasm
getrandom = { version = "0.2.15", features = ["js"] }
dioxus = { version = "0.5", features = ["web", "router"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-storage = "0.3.0"

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"

[lib]

[[bin]]
name = "fage2e-gui"
path = "src/main.rs"
