[package]
name = "fage2e"
version = "0.1.0"
authors = ["Jennifer Dahm <jennifer.carol.dahm@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = { version = "0.26.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"], optional = true }
rand = { version = "0.8.5", optional = true }
